# elastoconsole

./: .coveragerc  .dockerignore  LICENSE  README.md  pyproject.toml  setup.cfg
test/: test_elastoconsole.py
